# generador_ideas_youtube

./: .gitignore  README.md  pyproject.toml
src/generador_ideas_crew/: crew.py  main.py
src/generador_ideas_crew/config/: agents.yaml  tasks.yaml
